--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,7 +1,6 @@
 {
   "private": true,
   "name": "examples",
-  "version": "0.15.7",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -10,13 +9,11 @@
   "dependencies": {
     "next": "^10.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-native-web": "0.15.7"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
-    "@babel/preset-flow": "^7.12.13",
-    "babel-plugin-react-native-web": "0.15.7"
+    "@babel/preset-flow": "^7.12.13"
   },
   "license": "MIT"
 }
