--- a/packages/react-native-web/package.json
+++ b/packages/react-native-web/package.json
@@ -1,7 +1,8 @@
 {
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://nodejs.bnq.com.cn/"
   },
+  "version": "1.0.1",
   "name": "react-native-web",
   "description": "React Native for Web",
   "module": "dist/index.js",
